# Beep

./: .gitignore  build.gradle  udacity_submit_keystore.jks
SuperpoweredSDK/: currently_used_Superpowered.txt
androidlame/: CMakeLists.txt  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/jni/: BeepFx.h  CMakeLists.txt  SuperpoweredAudio.cpp  SuperpoweredAudio.h  SuperpoweredExample.cpp  SuperpoweredExample.h  jniapi.h.h
app/src/main/res/animator/: button_anim.xml
app/src/main/res/drawable/: boards_list_background.xml  btn_ripple_effect.xml  edit_fragment_button.xml  gradient_imageview.xml  line_divider_gray.xml  line_divider_white.xml  play_button_bg.xml  rounded_corners_bg.xml  rounded_corners_textview.xml  spinner_bg.xml  toggle_button_background.xml  toggle_state_off.xml  toggle_state_on.xml  top_beeps_background.xml  view_border_frame.xml  widget_boards_list_background.xml
app/src/main/res/layout/: activity_board.xml  activity_create_board.xml  activity_login.xml  activity_main.xml  activity_record.xml  app_bar_layout.xml  beep_list_item.xml  board_list_item.xml  board_list_item_widget.xml  content_main.xml  widget.xml  (+7 more)
app/src/main/res/layout-sw600dp/: activity_main.xml
app/src/main/res/layout-sw600dp-land/: activity_board.xml  activity_create_board.xml  activity_main.xml  activity_record.xml  content_main.xml
app/src/main/res/layout-sw720dp/: activity_main.xml
app/src/main/res/layout-sw720dp-land/: activity_board.xml  activity_main.xml
debug_audio/: DebugAudio.java
gradle/wrapper/: gradle-wrapper.properties
(+88 files in other folders)
